test: install deps requires permission

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         # This might be better replaced by Pipenv
         - name: install dependencies
           run: |
-            apt-get install -y make
+            sudo apt-get install -y make
             make install
 
         - name: run test suite
