build: add missing requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ url = https://github.com/clobrano/spy
 [options]
 packages = find:
 python_requires = >=3.6
+install_requires =
+    watchdog
 
 [options.entry_points]
 console_scripts =
