build: bump version 1.0.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name=fsspy
-version=1.0.1
+version=1.0.2
 author = Carlo Lobrano
-author-email = <c.lobrano@gmail.com> 
+author_email = <c.lobrano@gmail.com> 
 description = Filesystem events watcher
 long_description = file: README.md
 long_description_content_type = text/markdown
